@@ -6,6 +6,9 @@ Changes with JK 1.2.3:
       [glenn]
     * Apache 2/1.3, if Tomcat returns an error but not content,
       let Apache handle processing the error returned by Tomcat.
+    * Added the load balancer sticky_session property. If set to 0
+      requests with servlet SESSION ID's can be routed to any Tomcat
+      worker. Default is 1, sessions are sticky.
 
 Changes with JK 1.2.2:
     * tomcat_trend.pl updated script to support changed logging of 
